[metadata]
name = ciphers
description = Module for ciphering and deciphering messages
maintainer = Norbert Acedański
author = Norbert Acedański
url = https://github.com/norbert-acedanski/ciphers
platforms = any
licence = MIT
license_file = LICENSE
classifiers = 
    Development Status :: 1 - Production/Stable
    Framework :: tox
    Intended Audience :: Users
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
zip_safe = True
python_requires = !=2.7.*, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*, !=3.6.*, !=3.7.*
install_requires = tox >=3.14
setup_requires = setuptools_scm[toml] >=5

[options.extras_require]
testing =
    pytest >=6.2.5
    tox >= 3.14
[tox:tox]
minversion = 3.8
isolated_build = true
skip_missing_interpreters = true
envlist = py38,py39,py310, py311, py312

[testenv]
description = run test suite under {basepython}
deps = 
    -r{toxinidir}/requirements_dev.txt
extras = testing
pytest --basetemp={envtmpdir}
